v.1.1.5
	Method set_relation - New feature to add more than one fields to the title of the related table.
	Adding Timestamp as an automatic date and time field.
	Change the business logic of adding js and css files. This is really useful for a future feature with multiple tables in the same view.
	A temporary solution for the search for All that have a relation_n_n.
	Fixing issue #1 - flexigrid width is always 900px. Now it's always 100% width.
v.1.1.4
	Bug Fix - When you have unset edit and unset delete in your actions and also you have insert one or more add_action, the column Actions disapeared.
	Adding a new field type named "password". This is a simple transformation of the field input from text to password and it hides the password from the list grid.
	Changing state name insert and update to... "insert" and "update" and not "add" and "edit" that was till this revision.
	Fully compatible with codeigniter 2.1 - Changing the library of CI_Form_Validation and adding it into the library of grocery CRUD for stability. 
v.1.1.3
	Changing the functionality of the private method _theme_view. Now it's not dependent with the Loader of codeigniter.
		So every template controller, HMVC, e.t.c. can work well with grocery CRUD now.
	Changing the library core and make it more minimal and more powerful.
	New method unset_jquery. Very useful, if you already have the jquery library at your basic template.This is good to avoid jquery conflicts.
	BUG fix - No more conflicts between flexigrid tables. There was a cookie conflict between different lists.
	BUG fix - The set relation now works if you add the same table name twice.
	Renaming the folder public to assets.
	Grocery CRUD is now ready to be a spark.
	Changing the functionality and the javascript of the uploader. There is no need to have $config['enable_query_strings'] set to true anymore.
v.1.1.2
	Renaming the label "Tools" to "Actions".