@@ -45,6 +45,8 @@ $(function(){
 		createCookie('per_page_'+unique_hash,$('#per_page').val(),1);
 		createCookie('hidden_ordering_'+unique_hash,$('#hidden-ordering').val(),1);
 		createCookie('hidden_sorting_'+unique_hash,$('#hidden-sorting').val(),1);
+		createCookie('search_text_'+unique_hash,$('#search_text').val(),1);
+		createCookie('search_field_'+unique_hash,$('#search_field').val(),1);
 		
 		return false;
 	});
@@ -152,13 +154,20 @@ $(function(){
 	var cookie_per_page  = readCookie('per_page_'+unique_hash);
 	var hidden_ordering  = readCookie('hidden_ordering_'+unique_hash);
 	var hidden_sorting  = readCookie('hidden_sorting_'+unique_hash);
+	var cookie_search_text  = readCookie('search_text_'+unique_hash);
+	var cookie_search_field  = readCookie('search_field_'+unique_hash);
 	
-	if(cookie_crud_page != null && cookie_per_page != null)
+	if(cookie_crud_page !== null && cookie_per_page !== null)
 	{		
 		$('#crud_page').val(cookie_crud_page);
 		$('#per_page').val(cookie_per_page);		
 		$('#hidden-ordering').val(hidden_ordering);
 		$('#hidden-sorting').val(hidden_sorting);
+		$('#search_text').val(cookie_search_text);
+		$('#search_field').val(cookie_search_field);
+		
+		if(cookie_search_text !== '')
+			$('#quickSearchButton').trigger('click');
 		
 		$('#filtering_form').trigger('submit');
 	}
